Closed Bug 902231 Opened 11 years ago Closed 11 years ago

Fix the exact rooting hazard in Environment in XPCShellEnvironment

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla26

People

(Reporter: terrence, Assigned: terrence)

References

Details

Attachments

(1 file)

This is in the testshell, so I think we should just re-root this global reference.
Attachment #786603 - Flags: review?(jcoppeard)
Comment on attachment 786603 [details] [diff] [review] hazard_Environment-v0.diff Review of attachment 786603 [details] [diff] [review]: ----------------------------------------------------------------- Looks good.
Attachment #786603 - Flags: review?(jcoppeard) → review+
Not sure how I missed it, but there was a stray change in the patch to the rooting analysis. Fortunately you seem to have spotted this before pushing.
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: