Bug 902231 - Fix two exact rooting hazards in XPCShellEnvironment; r=jonco